--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,6 @@
 /* Header */
 .header {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   right: 0;
